--- a/express-authorization-code/views/page-2.html
+++ b/express-authorization-code/views/page-2.html
@@ -30,7 +30,7 @@
   <div class="page-content">
     <div class="header-container bg-white">
       <div class="logo-button">
-        <a class="navbar-brand pt-0 ms-3 ms-lg-0" id="bxi-logo" href="/">
+        <a class="navbar-brand d-block pt-0 ms-3 ms-lg-0" id="bxi-logo" href="/">
           <img width="132" src="../public/assets/ping-logo-horizontal.svg" alt="Logo" />
         </a>
       </div>
@@ -42,17 +42,14 @@
 
     <div class="body-container">
       <div class="card">
-        <div class="media">
-          <div class="media-body d-flex justify-content-between">
-            <div class="image-placeholder"></div>
+        <div class="media d-flex">
+          <div class="image-placeholder"></div>
 
-            <div class="flex-grow-1">
-              <h3 class="media-title">This is an interactive preview</h3>
-              <p>Complete the steps under “Design a Solution”, then use this sample application to demo a registration
-                and
-                sign-on experience.</p>
-            </div>
-
+          <div class="media-body flex-grow-1">
+            <h3 class="media-title">This is an interactive preview</h3>
+            <p>Complete the steps under “Design a Solution”, then use this sample application to demo a registration
+              and
+              sign-on experience.</p>
           </div>
         </div>
       </div>
